--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="msg_subscribed">Successful subscription</string>
+    <string name="msg_subscribe_failed">Error at susbscribing on Firebase</string>
+    <string name="default_notification_channel_id">GeneralChannel</string>
 </resources>
